--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -79,7 +79,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-            android:id="@+id/createText"
+            android:id="@+id/loginRegisterBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="76dp"
@@ -100,7 +100,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/createText"
+            app:layout_constraintTop_toBottomOf="@+id/loginRegisterBtn"
             app:layout_constraintVertical_bias="0.0"
             tools:visibility="invisible" />
 
